<resources>
    <string name="app_name">Lavucy</string>
    <string name="icone">icon</string>
    <string name="logo">logo</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="txtTelefone">Telefone</string>
    <string name="txtEndereco">Endereço</string>
    <string name="txtObs">Observações</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnCliente">Cliente</string>
    <string name="btnProduto">Produtos</string>
    <string name="btnVenda">Venda</string>
    <string name="txtCodigo">Código</string>
    <string name="txtNomeProd">Nome do Produto</string>
    <string name="txtMarca">Marca</string>
    <string name="txtCategoria">Categoria</string>
    <string name="txtTamanho">Tamanho</string>
    <string name="txtQuantidade">Quantidade</string>
    <string name="txtPrecoCusto">Preço de Custo</string>
    <string name="txtPrecoVenda">Preço de Venda</string>
    <string name="txtDescricaoProd">Descrição do Produto</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Maria Padilha</string>
    <string name="nav_header_subtitle">lavucy@outlook.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Página Inicial</string>
    <string name="menu_Client">Clientes</string>
    <string name="menu_products">Produtos</string>
    <string name="menu_stock">Estoque</string>
    <string name="menu_sell">Vendas</string>
    <string name="menu_cashier">Meu Caixa</string>
    <string name="menu_Report">Relatórios</string>
    <string name="menu_requests">Lista de Pedidos</string>
    <string name="home">Página Inicial</string>
    <string name="search">Search</string>
</resources>
